--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -2,14 +2,14 @@
 	<p class="mb-0 text-center">
 		<%= link_to post_favorites_path(post), method: :delete, remote: true do %>
 			<i class="fa-solid fa-heart"></i>
-			<%= post.favorites.count %>
+			<span class="fw-bold"><%= post.favorites.count %></span>
 		<% end %>
 	</p>
 <% else %>
 	<p class="mb-0 text-center">
 		<%= link_to post_favorites_path(post), method: :post, remote: true do %>
 			<i class="fa-regular fa-heart"></i>
-			<%= post.favorites.count %>
+			<span class="fw-bold"><%= post.favorites.count %></span>
 		<% end %>
 	</p>
 <% end %>
