--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -11,5 +11,26 @@
   </div>
 </header>
 
-<!--ユーザー一覧-->
-<%= render "index", members: @members %>
+<!--ユーザー一覧メイン-->
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2 d-flex justify-content-between">
+      <div class="container">
+        <div class="row">
+          <!--性別選択-->
+          <div class="col-lg-3 gender-nav">
+            <nav></nav>
+          </div>
+
+          <!--ユーザー一覧-->
+          <div class="col-lg-9">
+            <ul class="ps-0">
+              <%= render "index", members: @members %>
+            </ul>
+            <%= paginate @members %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
