--- a/app/views/public/members/search.html.erb
+++ b/app/views/public/members/search.html.erb
@@ -11,8 +11,29 @@
       </div>
     </div>
   </header>
-  <!--ユーザー一覧-->
-  <%= render "index", members: @search_members %>
+  <!--main-->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2 d-flex justify-content-between">
+        <div class="container">
+          <div class="row">
+            <!--性別選択-->
+            <div class="col-lg-3 gender-nav">
+              <nav></nav>
+            </div>
+
+            <!--ユーザー一覧-->
+            <div class="col-lg-9">
+              <ul class="ps-0">
+                <%= render "index", members: @search_members %>
+              </ul>
+              <%= paginate @search_members %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <% else %>
   <p>条件に一致するユーザーは見つかりませんでした</p>
 <% end %>
