--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,7 +1,35 @@
+<header id="title_top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 offset-md-1 d-flex justify-content-between">
+        <h1>コーディネート一覧</h1>
+        <div class="all_member">
+          <h2 class="ps-3"><%= @posts.count %><span>件</span></h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!--コーデ一覧メイン-->
 <div class="container">
   <div class="row">
-    <h1>コーディネート一覧</h1>
-    <%= render "index", posts: @posts %>
+    <div class="col-md-10 offset-md-1 d-flex justify-content-between">
+      <div class="container">
+        <div class="row">
+          <!--性別選択-->
+          <div class="col-md-3 gender-nav">
+            <nav></nav>
+          </div>
+          <!--コーディネート一覧-->
+          <div class="col-md-9">
+            <div class="row">
+              <%= render "index", posts: @posts %>
+            </div>
+            <%= paginate @posts %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
