--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,25 +1,68 @@
-<h1>コーディネート登録</h1>
-<%= form_with model: @post, url: posts_path, method: :post do |f| %>
-  <div class="form-group">
-    <label>コーディネート画像</label>
-    <%= f.file_field :outfit_image, accept: 'image/*', class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label>コーディネートのポイント</label>
-    <%= f.text_area :body, class: "form-control" %>
-  </div>
-
-  <div class='form-group'>
-    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
-      <div class='form-check'>
-        <%= tag.label class: 'form-check-label' do %>
-          <%= tag.check_box class: 'form-check-input' %>
-          <%= tag.text %>
-        <% end %>
+<header id="title_top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <h1>
+          コーディネート登録
+        </h1>
       </div>
-    <% end %>
+    </div>
   </div>
+</header>
 
-  <%= f.submit "投稿する" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <%= form_with model: @post, url: posts_path, method: :post do |f| %>
+        <div id="main-container">
+          <p class="title">基本情報</p>
+          <div class="container pt-5 pb-3">
+            <div class="form-group row mb-3 align-items-center">
+              <div class="col-lg-4 text-center">
+                <p>コーディネート画像</p>
+              </div>
+              <div class="col-lg-8">
+                <%= f.file_field :outfit_image, accept: 'image/*', class: "form-control" %>
+              </div>
+            </div>
+            <div class="form-group row mb-3 align-items-center">
+              <div class="col-md-4 text-center">
+                <p>コーディネートのタイトル</p>
+              </div>
+              <div class="col-md-8 d-grid">
+                <%= f.text_field :title, class: "form-control" %>
+              </div>
+            </div>
+            <div class="form-group row mb-3 align-items-center">
+              <div class="col-md-4 text-center">
+                <p>コーディネートのポイント</p>
+              </div>
+              <div class="col-md-8 d-grid">
+                <%= f.text_area :body, class: "form-control" %>
+              </div>
+            </div>
+          </div>
+
+          <p class="title">タグ</p>
+          <div class="container py-3 d-flex flex-wrap gap-3">
+            <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+            <div class="form-group">
+              <div class='form-check'>
+                <%= tag.label class: 'form-check-label' do %>
+                  <%= tag.check_box class: 'form-check-input' %>
+                  <%= tag.text %>
+                <% end %>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
+        <div class="row mx-auto my-3">
+          <div class="col-md-4 offset-md-4 d-grid">
+            <%= f.submit "変更する", class: "btn btn-primary text-center" %>
+          </div>
+        </div>
+    　<% end %>
+    </div>
+  </div>
+</div>
