--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -2,7 +2,27 @@
   <div class="container">
     <div class="row">
       <h1>タグ検索一覧</h1>
-      <%= render "index", posts: @search_posts %>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10 offset-md-1 d-flex justify-content-between">
+            <div class="container">
+              <div class="row">
+                <!--性別選択-->
+                <div class="col-md-3 gender-nav">
+                  <nav></nav>
+                </div>
+                <!--コーディネート一覧-->
+                <div class="col-md-9">
+                  <div class="row">
+                    <%= render "index", posts: @search_posts %>
+                  </div>
+                <%= paginate @search_posts %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <% else %>
