--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,22 +1,40 @@
-<div class="container">
-  <div class="row">
-    <div class="member_top">
-      <%= image_tag @post.member.get_profile_image, class: "profile_image_top" %>
-      <%= @post.member.name %>
-      <%= @post.member.height %>cm
-      <%= @post.member.get_gender %>
-      <% if @post.member == current_member %>
-        <%= link_to "編集", edit_post_path(@post) %>
-        <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に削除しますか？"} %>
-      <% else %>
-        <span id="follow_btn_<%= @post.member.id %>">
-          <%= render "public/relationships/follow", member: @post.member %>
-        </span>
-      <% end %>
+<header id="title_top">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 offset-md-1">
+        <p><%= @post.member.name %>の投稿詳細</p>
+        <div class="member_profile mt-3 d-flex justify-content-between">
+          <div class="d-flex">
+            <div>
+              <%= image_tag @post.member.get_profile_image, class: "profile_image_top" %>
+            </div>
+            <div class="title_text_header ps-4">
+              <h1><%= @post.member.name %></h1>
+              <div class="d-flex">
+                <p class="pe-2"><%= @post.member.get_gender %></p>
+                <p class="pe-2"><%= @post.member.get_height %></p>
+              </div>
+            </div>
+          </div>
+          <% if @post.member == current_member %>
+            <div class="btn_area d-flex justify-content-between mt-3">
+              <%= link_to "編集", edit_post_path(@post), class: "btn btn-secondary me-2" %>
+              <%= link_to "削除", post_path(@post), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger" %>
+            </div>
+          <% else %>
+            <div id="follow_btn_<%= @post.member.id %>" class="mt-3 ms-3">
+              <%= render "public/relationships/follow", member: @post.member %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
+</header>
+<div class="container mt-4">
   <div class="row">
-    <div class="col-md-7 col-lg-5">
+    <!--投稿画像-->
+    <div class="col-md-5 offset-md-1">
       <div class="card">
         <%= image_tag @post.outfit_image, class: "outfit_image_show" %>
         <ul class="list-group list-group-flush">
@@ -31,27 +49,33 @@
         </ul>
       </div>
     </div>
+    <!--投稿テキスト-->
     <div class="col-md-5">
       <div class="coordinate_info">
-        <div class="row">
-          <p>
+        <h1><%= @post.title %></h1>
+        <p class="mt-2">
+          <span>
             モデル情報:
-            <%= @post.member.height %>cm
+            <%= @post.member.get_height %> /
             <%= @post.member.get_gender %>
-          </p>
-          <p class="border-top"><%= @post.body %></p>
-          <p class="border-top">
-            <i class="fa-regular fa-clock"></i>
+          </span>
+        </p>
+        <p class="border-top mt-3 pt-3"><%= @post.body %></p>
+        <p class="border-top mt-3 py-2">
+          <span>
+            <i class="fa-regular fa-clock me-1"></i>
             <%= @post.created_at.strftime('%Y/%m/%d') %>
-          </p>
-        </div>
+          </span>
+        </p>
       </div>
-      <div class="tag_area">
-        <h4>着用タグからコーディネートを探す</h4>
+      <div class="tag_area pt-3">
+        <h2 class="title mb-3">着用タグからコーディネートを探す</h2>
         <% @post.tags.each do |tag| %>
-          <%= link_to search_posts_path do %>
-            <span class="tag_box"># <%= tag.name %></span>
-          <% end %>
+          <div class="tag_box me-2">
+            <%= link_to search_posts_path do %>
+              # <%= tag.name %>
+            <% end %>
+          </div>
         <% end %>
       </div>
     </div>
