--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -19,7 +19,9 @@
         <div class="row">
           <!--性別選択-->
           <div class="col-md-3 gender-nav">
-            <nav></nav>
+            <nav>
+              <h3 class="title"></h3>
+            </nav>
           </div>
           <!--コーディネート一覧-->
           <div class="col-md-9">
