--- a/app/views/public/post_comments/_comment.html.erb
+++ b/app/views/public/post_comments/_comment.html.erb
@@ -25,7 +25,7 @@
         </div>
       <% end %>
     <% else %>
-      <p>NO COMMENT</p>
+      <p class="text-center py-5 fw-bold">NO COMMENT</p>
     <% end %>
   </div>
 </li>
