--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -72,7 +72,7 @@
       <div class="tag_area pt-2 gap-2">
         <% @post.tags.each do |tag| %>
           <div class="tag_box">
-            <%= link_to search_posts_path do %>
+            <%= link_to tag_path(tag.id) do %>
               # <%= tag.name %>
             <% end %>
           </div>
