--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -30,9 +30,20 @@
 
   a {
     text-decoration: none;
-    color: #333;
+    color: #333 ;
     font-size: 15px;
   }
+
+  a:hover {
+    color: #888;
+    opacity: 0.75;
+  }
+
+  .btn:hover,
+  .dropdown-toggle:hover {
+    opacity: 0.75;
+  }
+
 
   p {
     margin-bottom: 0;
