--- a/app/views/public/members/search.html.erb
+++ b/app/views/public/members/search.html.erb
@@ -22,8 +22,8 @@
                 <h2 class="title">性別</h2>
                 <ul class="m-0">
                   <li class="py-2"><%= link_to "ALL", members_path %></li>
-                  <li class="py-2"><%= link_to "MEN", men_member_path(current_member) %></li>
-                  <li class="py-2"><%= link_to "WOMEN", women_member_path(current_member) %></li>
+                  <li class="py-2"><%= link_to "MEN", men_members_path %></li>
+                  <li class="py-2"><%= link_to "WOMEN", women_members_path %></li>
                 </ul>
               </nav>
             </div>
