--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -93,7 +93,10 @@
                 <% if member_signed_in? %>
                   <%= render "public/favorites/favorite", post: post %>
                 <% else %>
-                  <%= post.favorites.count %>
+                  <p class="text-center">
+                    <i class="fa-solid fa-heart"></i>
+                    <%= post.favorites.count %>
+                  </p>
                 <% end %>
               </li>
             </ul>
