--- a/app/views/public/post_comments/_comment.html.erb
+++ b/app/views/public/post_comments/_comment.html.erb
@@ -7,7 +7,11 @@
       <% post.post_comments.each do |post_comment| %>
         <div class="comment_area p-2">
           <div class="d-flex">
-            <p><%= image_tag post_comment.member.profile_image, class: "profile_image_li me-2" %></p>
+            <p>
+              <%= link_to member_path(post_comment.member) do %>
+                <%= image_tag post_comment.member.profile_image, class: "profile_image_li me-2" %>
+              <% end %>
+            </p>
             <div class="main">
               <p class="mb-0"><%= post_comment.member.name %> <span><%= post_comment.created_at.strftime('%Y/%m/%d') %></span></p>
               <div class="d-flex">
@@ -29,18 +33,20 @@
     <% end %>
   </div>
 </li>
-<%= form_with model: post_comment_new, url: post_post_comments_path(post), method: :post, local: false do |f| %>
-  <li class="list-group-item">
-    <div class="form-box d-flex gap-2">
-      <div class="col-1">
-        <%= image_tag current_member.get_profile_image, class: "profile_image_li" %>
+<% if member_signed_in? %>
+  <%= form_with model: post_comment_new, url: post_post_comments_path(post), method: :post, local: false do |f| %>
+    <li class="list-group-item">
+      <div class="form-box d-flex gap-2">
+        <div class="col-1">
+          <%= image_tag current_member.get_profile_image, class: "profile_image_li" %>
+        </div>
+        <div class="col-9">
+          <%= f.text_area :comment, rows: '1', placeholder: "コメントを書く", class: "form-control d-grid comment-form" %>
+        </div>
+        <div class="col-1">
+          <%= f.submit "送信", class: "btn btn-secondary" %>
+        </div>
       </div>
-      <div class="col-9">
-        <%= f.text_area :comment, rows: '1', placeholder: "コメントを書く", class: "form-control d-grid comment-form" %>
-      </div>
-      <div class="col-1">
-        <%= f.submit "送信", class: "btn btn-secondary" %>
-      </div>
-    </div>
-  </li>
+    </li>
+  <% end %>
 <% end %>
