--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -9,7 +9,7 @@
           <% if member_signed_in? %>
             <%= render "public/favorites/favorite", post: post %>
           <% else %>
-            <p>
+            <p class="text-center">
               <i class="fa-solid fa-heart"></i>
               <%= post.favorites.count %>
             </p>
