--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,2 +1,79 @@
-<h1>Admin::Members#show</h1>
-<p>Find me in app/views/admin/members/show.html.erb</p>
+<header id="title_top">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <p><%= @member.name %>のページ</p>
+        <div class="member_profile mt-3">
+          <div class="d-flex">
+            <div>
+              <%= image_tag @member.get_profile_image, class: "profile_image_show" %>
+            </div>
+            <div class="title_text ps-4 pt-1">
+              <h1><%= @member.name %></h1>
+              <div class="d-flex">
+                <p class="pe-2"><%= @member.get_gender %></p>
+                <p class="pe-2"><%= @member.get_height %></p>
+              </div>
+              <p class="pt-3"><%= @member.body %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!--ユーザーの投稿数、フォロー、フォロワー数-->
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="coordinate_follow d-flex text-center">
+        <div class="coordinate_follow_box col-4">
+          <%= link_to admin_member_path(@member) do %>
+            <%= @member.posts.count %>
+            <span>コーディネート</span>
+          <% end %>
+        </div>
+        <div class="coordinate_follow_box col-4">
+          <%= link_to followings_member_path(@member) do %>
+            <%= @member.followings.count %>
+            <span>フォロー</span>
+          <% end %>
+        </div>
+        <div class="coordinate_follow_box col-4">
+          <%= link_to followers_member_path(@member) do %>
+            <%= @member.followers.count %>
+            <span>フォロワー</span>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <% if @member.posts.count == 0 %>
+      <div class="pt-5 text-center">
+        <h4>まだ投稿がありません</h4>
+      </div>
+    <% else %>
+      <% @member_posts.each do |post| %>
+        <div class="col-md-3 g-5">
+          <div class="card">
+            <%= link_to admin_post_path(post) do %>
+              <%= image_tag post.outfit_image, class: "outfit_image_index" %>
+            <% end %>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item" id="favorite_buttons_<%= post.id %>">
+                <p class="text-center">
+                  <i class="fa-solid fa-heart"></i>
+                  <%= post.favorites.count %>
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      <% end %>
+      <%= paginate @member_posts %>
+    <% end %>
+  </div>
+</div>
+
