--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -1,11 +1,15 @@
 <% if member_signed_in? %>
-  <% if member.followed_by?(current_member) %>
-    <%= link_to member_relationships_path(member), method: :delete, remote: true, class: "follow-btn btn btn-danger px-3" do %>
-      <span>フォロー中</span>
-    <% end %>
+  <% if member == current_member %>
+    <%= link_to "マイページ", member_path(current_member), class: "btn btn-secondary" %>
   <% else %>
-    <%= link_to member_relationships_path(member), method: :post, remote: true, class: "follow-btn btn btn-primary" do %>
-      <span>フォローする</span>
+    <% if member.followed_by?(current_member) %>
+      <%= link_to member_relationships_path(member), method: :delete, remote: true, class: "follow-btn btn btn-danger px-3" do %>
+        <span>フォロー中</span>
+      <% end %>
+    <% else %>
+      <%= link_to member_relationships_path(member), method: :post, remote: true, class: "follow-btn btn btn-primary" do %>
+        <span>フォローする</span>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
