--- a/app/views/admin/posts/_index.html.erb
+++ b/app/views/admin/posts/_index.html.erb
@@ -7,7 +7,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item m-0" id="favorite_buttons_<%= post.id %>">
           <p class="text-center">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart text-danger"></i>
             <%= post.favorites.count %>
           </p>
         </li>
