--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -96,6 +96,13 @@
     font-size: 15px;
   }
 
+  #tag-main-container {
+    border: 1px #ddd solid;
+    border-radius: 4px;
+    background-color: #fff;
+    margin-top: 18px;
+  }
+
   #main-container {
     border: 1px #ddd solid;
     border-radius: 4px;
@@ -103,7 +110,8 @@
     margin-top: 40px;
   }
 
-  #main-container .title {
+  #main-container .title,
+  #tag-main-container .title {
     padding: 10px 5px 10px 20px;
     font-size: 12px;
     background: #efefef;
@@ -152,13 +160,14 @@
 
   .outfit_image_index {
     width: 100%;
-    height: 100%;
+    height: 326px;
     border-radius: 2px 2px 0 0;
     border: none;
   }
 
   .outfit_image_show {
     max-width: 550px;
+    height: 700px;
     border-radius: 2px 2px 0 0;
     border: none;
   }
@@ -366,5 +375,21 @@
 .gender-nav h2 {
   font-size: 18px;
   margin-left: 19px;
+}
+
+.member_info {
+  position: relative;
+}
+
+.withdraw_btn {
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+}
+
+.admin-delete-btn {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
